@@ -3010,6 +3010,7 @@ Version 1.5.0beta44 [August 11, 2010]
   Check interlaced images in pngvalid
   Clarified pngusr.h comments in pnglibconf.dfa
   Simplified the pngvalid error-handling code now that cexcept.h is in place.
+  Implemented progressive reader in pngvalid.c for standard tests
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
